# Pointra-Pub

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: access_mac.rs  audio.rs  config.rs  mod.rs  translate.rs  window.rs
src-tauri/src/utils/: capture_mac.rs  capture_win.rs  define_config.rs  get_text.rs  macos_api.rs  mod.rs  ocr_common.rs  ocr_mac.rs  ocr_win.rs  selection_mac.rs  selection_win.rs  set_window.rs  shortcuts.rs  show_window.rs  tray.rs
src/assets/css/: App.css
src/assets/css/main/: index.css
src/hooks/: usePlatform.ts
src/main/: App.tsx  index.html  index.tsx
src/main/components/: ApiError.tsx  Content.tsx  CustomToast.tsx  Footer.tsx  Header.tsx  Loading.tsx  SearchContent.tsx
src/main/pages/: HomePage.tsx  SearchPage.tsx
src/main/store/: useConfigStore.ts  useUiStore.ts
src/main/types/: transResult.d.ts
src/main/utils/: tool.ts  useCustom.ts
src/setting/: App.tsx  ConfigManager.ts  hooks.ts  index.html  settingsMeta.ts  types.ts  utils.ts
src/setting/components/: AboutSection.tsx  GeneralSection.tsx  KeyTag.tsx  PermissionMacSection.tsx  SettingHeader.tsx  ShortcutSection.tsx
